fixed: z-index in header

--- a/styles/style.css
+++ b/styles/style.css
@@ -194,6 +194,7 @@ p {
   position: absolute;
   right: 0;
   bottom: 0;
+  z-index: -1;
 }
 
 .header__square-pic {
@@ -203,7 +204,7 @@ p {
   position: absolute;
   top: 64px;
   right: 0;
-  z-index: -1;
+  z-index: -2;
 }
 
 /* - /Header - */
